--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Gaengji # the main title
 
-tagline: 간단한 정리포폴모든것들의집합체 # it will display as the subtitle
+tagline: 간단한 정리포폴기록들과내가하는모든것들 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   개발, 학습 기록, 포트폴리오 자료를 한눈에 볼 수 있는 개인 블로그
@@ -36,6 +36,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/gaengji # change to your GitHub homepage
+    - https://plume-pantry-8f8.notion.site/Main-2720313e9fc480d59a68e5dd61c57c9c?pvs=73
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -98,7 +99,7 @@ avatar: https://avatars.githubusercontent.com/u/165354145?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: https://avatars.githubusercontent.com/u/165354145?v=4 # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
