--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,12 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+#- type: twitter
+#  icon: "fa-brands fa-x-twitter"
+
+- type: notion
+  icon: "fab fa-notion"
+  url: "https://plume-pantry-8f8.notion.site/Main-2720313e9fc480d59a68e5dd61c57c9c?pvs=73"
 
 - type: email
   icon: "fas fa-envelope"
